--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/newspopper.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -27,8 +28,15 @@
   <!-- Add your site or application content here -->
   <p>Pop my shorts.</p>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="js/vendor/htm.js"></script>
+  <script src="js/vendor/vhtml.js"></script>
   <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+
+  <script src="js/plugins.js"></script>
+  <script type="module" src="js/main.js"></script>
+
+
+  <div id="wordsBag" ></div>
 
 </body>
 
