--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
   <!-- Add your site or application content here -->
   <p>Pop my shorts.</p>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/vendor/htm.js"></script>
-  <script src="js/vendor/vhtml.js"></script>
   <script src="js/plugins.js"></script>
 
   <script src="js/plugins.js"></script>
   <script type="module" src="js/main.js"></script>
 
+
+  <div id="dropZone" ></div>
 
   <div id="wordsBag" ></div>
 
