--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <script src="js/plugins.js"></script>
   <script type="module" src="js/main.js"></script>
 
+  <a href="page2.html">page2</a>
 
   <div id="dropZone" ></div>
 
