integrate canvas presentation

--- a/page2.html
+++ b/page2.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+  <meta charset="utf-8">
+  <title></title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta property="og:title" content="">
+  <meta property="og:type" content="">
+  <meta property="og:url" content="">
+  <meta property="og:image" content="">
+
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <!-- Place favicon.ico in the root directory -->
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/newspopper.css">
+
+  <meta name="theme-color" content="#fafafa">
 </head>
 <body>
  <h1>page2</h1>
+ <!-- Add your site or application content here -->
+ <p>Pop my shorts.</p>
+ <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+ <script src="js/plugins.js"></script>
 
+ <script src="js/plugins.js"></script>
+ <script type="module" src="js/main.js"></script>
+
+ <a href="page2.html">page2</a>
+
+ <div id="dropZone" ></div>
+
+ <div id="wordsBag" ></div>
 <a href="index.html">page1</a>
 </body>
 </html>
