--- a/index.html
+++ b/index.html
@@ -24,20 +24,18 @@
 </head>
 
 <body>
+<div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+          src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFusnSjvD0&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
 
-  <!-- Add your site or application content here -->
-  <p>Pop my shorts.</p>
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
+<a href="page2.html" >game</a>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFusnSjvD0&#x2F;view?utm_content=DAFusnSjvD0&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Filter bubbles are like personalized news feeds on the internet, created because websites and apps show us what they think we like, based on our clicks and searches.</a>
 
-  <script src="js/plugins.js"></script>
-  <script type="module" src="js/main.js"></script>
 
-  <a href="page2.html">page2</a>
-
-  <div id="dropZone" ></div>
-
-  <div id="wordsBag" ></div>
 
 </body>
 
