add gotogame button and make dropzone horizontal

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   </iframe>
 </div>
 
-<a href="page2.html" >game</a>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFusnSjvD0&#x2F;view?utm_content=DAFusnSjvD0&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Filter bubbles are like personalized news feeds on the internet, created because websites and apps show us what they think we like, based on our clicks and searches.</a>
-
+<a href="page2.html" class="linkButton" >Go to the game</a>
+<!--<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFusnSjvD0&#x2F;view?utm_content=DAFusnSjvD0&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Filter bubbles are like personalized news feeds on the internet, created because websites and apps show us what they think we like, based on our clicks and searches.</a>
+-->
 
 
 </body>
