add journal selector

--- a/page2.html
+++ b/page2.html
@@ -31,9 +31,11 @@
  <script src="js/plugins.js"></script>
  <script type="module" src="js/main.js"></script>
 
- <a href="page2.html">page2</a>
+ <div>What whould be the headline from <select id="newsPaperSelect" ></select> for this event </div>
 
  <div id="dropZone" ></div>
+
+
 
  <div id="wordsBag" ></div>
 <a href="index.html">page1</a>
