make grad copy and add cta

--- a/page2.html
+++ b/page2.html
@@ -33,7 +33,7 @@
  <div>What whould be the headline from <select id="newsPaperSelect" ></select> for this event </div>
 
  <div id="dropZone" ></div>
-
+ <button id="cta" >Check it out !</button>
 
 
  <div id="wordsBag" ></div>
