display selected words

--- a/page2.html
+++ b/page2.html
@@ -34,7 +34,7 @@
 
  <div id="dropZone" ></div>
  <button id="cta" >Check it out !</button>
-
+  <div id="result"></div>
 
  <div id="wordsBag" ></div>
 <a href="index.html">page1</a>
