clean page2 add buildTheTitle and fillTheBlank

--- a/page2.html
+++ b/page2.html
@@ -22,7 +22,7 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 <body>
- <h1>page2</h1>
+ <h1>Be the Journalist !</h1>
  <!-- Add your site or application content here -->
  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
  <script src="js/plugins.js"></script>
@@ -33,9 +33,10 @@
  <div>What whould be the headline from <select id="newsPaperSelect" ></select> for this event </div>
 
  <div id="dropZone" ></div>
- <button id="cta" >Check it out !</button>
-  <div id="result"></div>
+ <button id="ctaCheck" >Check it out !</button>  <button id="ctaReveal" >Reveal The Real Title !</button>
 
+ <div id="result"></div>
+  <h2 id="answer"></h2>
  <div id="wordsBag" ></div>
 <a href="index.html">page1</a>
 </body>
