start creating code for buildTheTitle

--- a/buildTheTitle.html
+++ b/buildTheTitle.html
@@ -16,6 +16,7 @@
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="https://unpkg.com/mvp.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/newspopper.css">
 
@@ -28,7 +29,7 @@
 <script src="js/plugins.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="js/plugins.js"></script>
-<script type="module" src="js/main.js"></script>
+<script type="module" src="js/buildTheTitle.js"></script>
 
 <div>What whould be the headline from <select id="newsPaperSelect" ></select> for this event </div>
 
@@ -36,7 +37,7 @@
 <button id="ctaCheck" >Check it out !</button>  <button id="ctaReveal" >Reveal The Real Title !</button>
 
 <div id="result"></div>
-<h2 id="answer"></h2>
+<div id="answer"></div>
 <div id="wordsBag" ></div>
 </body>
 </html>
