small tweaks on last game replace fox news by bbc change instruction text

--- a/buildTheTitle.html
+++ b/buildTheTitle.html
@@ -32,7 +32,7 @@
 <script type="module" src="js/buildTheTitle.js"></script>
 
 <div>What whould be the headline from <select id="newsPaperSelect" ></select> for this event </div>
-<p>Drop words in the correct order to build the best title according to news source style then check if you close to the real one</p>
+<p style="background-color: beige; color: black; width:fit-content" >Click on words from the word bank. The goal is to choose the tile that is best adapted to the news source that you chose.</p>
 <div id="dropAndHints"><div id="dropZone" ></div>
   <div id="hints" style="display: none" > <h4>hints : </h4>
     <ul>
